--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
       <h1>youtube subs</h1>
     </header>
 
-    <a class="github" href="https://github.com/kevinfiol/youtube_subs">[github]</a>
+    <a class="github" href="https://github.com/kevinfiol/youtube">[github]</a>
 
     <main>
       <% for (let day of it.days) { %>
