update template so that it is unique every time

--- a/src/template.html
+++ b/src/template.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<!--   test -->
     <header>
       <h1>youtube subs</h1>
     </header>
 
-    <a class="github" href="https://github.com/kevinfiol/youtube">[github]</a>
+    <a class="github" href="https://github.com/kevinfiol/youtube">
+      <small><%= it.now %></small>
+    </a>
 
     <main>
       <% for (let day of it.days) { %>
