--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <header>
+      <div class="search">
+        <form action="<%= it.searchUrl %>" method="GET">
+          <input type="text" class="text-input" name="q" placeholder="search" />
+        </form>
+      </div>
+
       <h1>🦉</h1>
     </header>
 
