--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
                   </a>
 
                   <a href="<%= video.youtube %>">
-                    <span>(YT)</span>
+                    <span>[YT]</span>
                   </a>
                 </p>
               </div>
