--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
     </header>
 
     <a class="github" href="https://github.com/kevinfiol/youtube">
-      <small><%= it.now %></small>
+      <small>github</small>
     </a>
 
     <main>
