--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       <div class="search">
         <form action="<%= it.searchUrl %>" method="GET">
           <div class="input-group">
-            <input type="text" class="text-input" name="q" placeholder="search" />
+            <input type="text" class="text-input" name="search_query" placeholder="search" />
             <button type="submit">submit</button>
           </div>
         </form>
